--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Box Breathing",
-  "short_name": "Box Breath",
-  "description": "A box breathing exercise app for relaxation and focus",
+  "short_name": "Breathe",
+  "description": "A calming box breathing exercise app for relaxation and focus",
   "start_url": "./index.html",
   "id": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#0a0a0f",
+  "theme_color": "#0a0a0f",
   "orientation": "portrait",
-  "categories": ["health", "lifestyle", "fitness"],
+  "categories": ["health", "lifestyle", "fitness", "wellness"],
   "lang": "en-US",
   "dir": "ltr",
   "prefer_related_applications": false,
